--- a/web/template/include/feed/new.gohtml
+++ b/web/template/include/feed/new.gohtml
@@ -1,5 +1,4 @@
-{{define "title"}}{{index . "title"}}{{end}}
 {{define "content"}}
-    <h1>{{index . "title"}}</h1>
+    <h1>{{.Title}}</h1>
     {{include "feed/_form" .}}
 {{end}}
