--- a/web/template/layout/header.gohtml
+++ b/web/template/layout/header.gohtml
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <title>KRSS | {{index . "title"}}</title>
+        <title>
+            KRSS
+            {{if .Title}} | {{.Title}}{{end}}
+        </title>
         <meta name="description" content="Kindle RSS Reader">
         <meta name="author" content="Juan Alvarez">
         {{block "style" .}} {{end}}
